Added various logo colors

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 			</div>
 
 			<div class="social">
-				<img src="images/facebook.png" />
-				<img src="images/twitter.png" />
-				<img src="images/email.png" />
+				<img src="images/facebook-tan.png" />
+				<img src="images/twitter-tan.png" />
+				<img src="images/email-tan.png" />
 			</div>
 
 			<div class="tesc">
-				<img src="images/tesc.png" />
+				<img src="images/tesc-tan.png" />
 			</div>
 
 		</div>
