Add flexbox and basic form

--- a/index.html
+++ b/index.html
@@ -2,14 +2,28 @@
 <html>
 	<head>
 		<title>SD Hacks 2016</title>
+
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="stylesheet.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="splash">
-			<img src="images/logo.png" class="logo" />
-			<div class="dates">
-				Sept. 30 - Oct. 2, 2016<br/>
-				Rimac Arena, UC San Diego
+			<div class="splash-content">
+				<img src="images/logo.png" class="logo" />
+				<div class="dates">
+					Sept. 30 - Oct. 2, 2016<br/>
+					Rimac Arena, UC San Diego
+				</div>
+
+				<div class="form">
+					<!-- Temporary placeholder form elems -->
+					<form id="front-form">
+						<input type="text" placeholder="Sign up for email updates!"><br>
+						<input type="submit" value="Subscribe">
+					</form>
+
+				</div>
 			</div>
 
 			<div class="social">
