--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
 	</head>
 	<body>
 		<div class="splash">
+			<div class="splash-bg">
+				<div class="island">
+					<img class="palm-tree" src="assets/Palm_Full.png">
+					<img class="sand" src="assets/island.png">
+				</div>
+				<div class="waves">
+					<!-- Using divs for repeating bg if need -->
+					<div class="wave" id="wave1"></div>
+					<div class="wave" id="wave1"></div>
+					<div class="wave" id="wave1"></div>
+					<div class="wave" id="wave1"></div>
+					<div class="wave" id="wave1"></div>
+<!-- 					<img class="wave" id="wave2" src="assets/Waves-03.png">
+					<img class="wave" id="wave3" src="assets/Waves-04.png">
+					<img class="wave" id="wave4" src="assets/Waves-05.png">
+		 -->	
+				</div>
+			</div>
 			<img src="images/logo.png" class="logo" />
 			<div class="dates">
 				Sept. 30 - Oct. 2, 2016<br/>
