--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
 					<img class="palm-tree" src="assets/Palm_Full.png">
 					<img class="sand" src="assets/island.png">
 				</div>
+				<div class="boat">
+				</div>
 				<div class="waves">
 					<!-- Using divs for repeating bg if need -->
 					<div class="wave" id="wave1"></div>
-					<div class="wave" id="wave1"></div>
-					<div class="wave" id="wave1"></div>
-					<div class="wave" id="wave1"></div>
-					<div class="wave" id="wave1"></div>
-<!-- 					<img class="wave" id="wave2" src="assets/Waves-03.png">
-					<img class="wave" id="wave3" src="assets/Waves-04.png">
-					<img class="wave" id="wave4" src="assets/Waves-05.png">
-		 -->	
+					<div class="wave" id="wave2"></div>
+					<div class="wave" id="wave3"></div>
+					<div class="wave" id="wave4"></div>
+					<div class="wave" id="wave5"></div>
 				</div>
 			</div>
 			<img src="images/logo.png" class="logo" />
