--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 					<img class="palm-tree" src="assets/Palm_Full.png">
 					<img class="sand" src="assets/island.png">
 				</div>
-				<div class="boat">
-				</div>
-				<div class="waves">
-					<!-- Using divs for repeating bg if need -->
+				<div class="ocean">
+					<div id="boat">
+						<div id="sail-left"></div>
+						<div id="sail-right"></div>
+						<div id="boat-body"></div>
+					</div>
+
 					<div class="wave" id="wave1"></div>
 					<div class="wave" id="wave2"></div>
 					<div class="wave" id="wave3"></div>
