Add and absolutely positioned clouds

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 	<body>
 		<div class="splash">
 			<div class="splash-bg">
-				<div class="island">
+				<div class="island"><!-- TODO: separate the palm tree -->
 					<img class="palm-tree" src="assets/Palm_Full.png">
 					<img class="sand" src="assets/island.png">
+				</div>
+				<div class="sky">
+					<div class="cloud" id="cloud1"></div>
+					<div class="cloud" id="cloud2"></div>
+					<div class="bird" id="bird1"></div>
+					<div class="bird" id="bird2"></div>
 				</div>
 				<div class="ocean">
 					<div id="boat">
