add html for palm tree separatiron

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 			<div class="splash-bg">
 				<div class="island"><!-- TODO: separate the palm tree -->
 					<img class="palm-tree" src="assets/Palm_Full.png">
+					<div id="palm-tree">
+						<div class="leaf" id="leaf1"></div>
+						<div class="leaf" id="leaf2"></div>
+						<div class="leaf" id="leaf3"></div>
+						<div class="leaf" id="leaf4"></div>
+						<div class="coconut" id="coconut1"></div>
+						<div class="coconut" id="coconut2"></div>
+						<div id="trunk"></div>
+					</div>
 					<img class="sand" src="assets/island.png">
 				</div>
 				<div class="sky">
