Clean up some css, fixed capitalization image load error

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="coconut" id="coconut1"></div>
 				<div class="coconut" id="coconut2"></div>
 			</div>
-			<img class="sand" src="assets/island.png">
+			<img class="sand" src="assets/Island.png">
 		</div>
 		<div class="sky">
 			<div class="cloud" id="cloud1"></div>
