--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="splash-bg">
-		<div class="island"><!-- TODO: separate the palm tree -->
+		<div class="island">
 			<div id="palm-tree">
 				<div class="leaf" id="leaf1"></div>
 				<div class="leaf" id="leaf2"></div>
@@ -33,7 +33,6 @@
 				<div id="sail-right"></div>
 				<div id="boat-body"></div>
 			</div>
-
 			<div class="wave" id="wave1"></div>
 			<div class="wave" id="wave2"></div>
 			<div class="wave" id="wave3"></div>
