change link to white

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 		</div>
 
 		<div class="social">
-			<img src="images/facebook-tan.png" />
-			<img src="images/twitter-tan.png" />
-			<img src="images/email-tan.png" />
+			<img src="images/facebook-white.png" />
+			<img src="images/twitter-white.png" />
+			<img src="images/email-white.png" />
 		</div>
 
 		<div class="tesc">
-			<img src="images/tesc-tan.png" />
+			<img src="images/tesc-white.png" />
 		</div>
 
 	</div>
