move island up one wave

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 				<div class="coconut" id="coconut1"></div>
 				<div class="coconut" id="coconut2"></div>
 			</div>
-			<img class="sand" src="assets/Island.png">
 		</div>
 		<div class="sky">
 			<div class="cloud" id="cloud1"></div>
@@ -29,6 +28,7 @@
 			<div class="bird" id="bird2"></div>
 		</div>
 		<div class="ocean">
+			<img class="sand" src="assets/Island.png">
 			<div id="boat">
 				<div id="sail-left"></div>
 				<div id="sail-right"></div>
@@ -44,11 +44,10 @@
 	</div>
 	<div class="splash">
 		<div class="splash-content">
-			<img src="images/logo1.png" class="logo" />
+			<img src="images/logo.png" class="logo" />
 			<div class="dates">
-
-				Sept. 30 - Oct. 2, 2016<br/>
-				Rimac Arena, UC San Diego
+				<h1>Sept. 30 - Oct. 2, 2016</h1>
+				<h2>Rimac Arena,&nbsp</h2><h2>UC San Diego</h2>
 			</div>
 
 			<!-- Begin MailChimp Signup Form -->
