--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="splash-bg">
-		<div class="island"><!-- TODO: separate the palm tree -->
+		<div class="island">
 			<div id="palm-tree">
 				<div class="leaf" id="leaf1"></div>
 				<div class="leaf" id="leaf2"></div>
@@ -42,7 +42,7 @@
 			<div class="wave" id="wave4"></div>
 			<div class="wave" id="wave5"></div>
 		</div>
-	</div>
+	</div><!-- end div.splash-bg -->
 	<div class="splash">
 		<div class="splash-content">
 			<img src="images/logo.png" class="logo" />
